crates/carta/tests/snapshots/golden_writer__native__table__table-empty.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Table
    ( "" , [] , [] )
    (Caption Nothing [])
    []
    (TableHead ( "" , [] , [] ) [])
    []
    (TableFoot ( "" , [] , [] ) [])
]
