crates/carta/tests/snapshots/golden_writer__native__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ BlockQuote
    [ Table
        ( "" , [] , [] )
        (Caption Nothing [])
        [ ( AlignDefault , ColWidthDefault )
        , ( AlignDefault , ColWidthDefault )
        ]
        (TableHead
           ( "" , [] , [] )
           [ Row
               ( "" , [] , [] )
               [ Cell
                   ( "" , [] , [] )
                   AlignDefault
                   (RowSpan 1)
                   (ColSpan 1)
                   [ Plain [ Str "a" ] ]
               , Cell
                   ( "" , [] , [] )
                   AlignDefault
                   (RowSpan 1)
                   (ColSpan 1)
                   [ Plain [ Str "b" ] ]
               ]
           ])
        [ TableBody
            ( "" , [] , [] )
            (RowHeadColumns 0)
            []
            [ Row
                ( "" , [] , [] )
                [ Cell
                    ( "" , [] , [] )
                    AlignDefault
                    (RowSpan 1)
                    (ColSpan 1)
                    [ Plain [ Str "1" ] ]
                , Cell
                    ( "" , [] , [] )
                    AlignDefault
                    (RowSpan 1)
                    (ColSpan 1)
                    [ Plain [ Str "2" ] ]
                ]
            ]
        ]
        (TableFoot ( "" , [] , [] ) [])
    ]
]
